## 2025-08-15

- **인라인 및 익명 열거형 지원 추가**:
  - PolyGen 스키마 내에서 인라인 및 익명 열거형을 정의하고 사용할 수 있도록 지원이 추가되었습니다.
  - AST 모델, 파서, IR 빌더 및 유효성 검사 로직이 새로운 열거형 타입을 처리하도록 업데이트되었습니다.
  - 이 기능은 열거형을 테이블 내에 직접 정의하거나 필드에 대한 익명 타입으로 정의할 수 있도록 하여, 보다 체계적이고 자체 포함적인 스키마 정의를 가능하게 합니다.

## 2025-08-08

- `ast.rs` 파일을 `ast_model.rs`와 `ast_parser.rs`로 분리하여 코드 구조를 개선했습니다.
- `main.rs`, `ir_builder.rs`, `validation.rs` 파일에서 `ast` 모듈 참조를 `ast_model` 및 `ast_parser`로 수정했습니다.
- `ast_parser.rs`에 누락된 `use` 구문을 추가하고, `build_ast_from_pairs` 함수를 `pub`으로 변경하여 모듈 외부에서 호출할 수 있도록 수정했습니다.
- `sample.polygen` 파일의 필드 정의 끝에 세미콜론(;)을 추가하여 문법 오류를 수정했습니다.

## 2025-08-09

- **템플릿 엔진 전환 및 정리**: minijinja 기반 코드 생성 시스템을 완전히 제거하고 Rhai 엔진으로 전환했습니다. 관련 파일 및 의존성을 정리했습니다.
- **AST/IR 모델 재구조화**:
    - `ast.rs`를 `ast_model.rs`와 `ast_parser.rs`로 분리하여 AST 데이터 구조와 파싱 로직을 명확히 구분했습니다.
    - IR 모델(`ir_model.rs`)에 `FileDef`를 도입하여 소스 파일별 코드 구성을 지원하고, `StructDef`에 `header` 필드를 추가하여 구조체 선언 전 메타데이터(주석, 어노테이션)를 포함할 수 있도록 했습니다.
    - `AnnotationDef` 및 `EnumDef`에 `comment` 필드를 추가하여 주석을 직접 연결할 수 있도록 개선했습니다.
    - `ir_builder.rs`를 업데이트하여 새로운 AST/IR 구조에 맞춰 메타데이터를 처리하고, 어노테이션에 선행하는 주석을 자동으로 연결하도록 로직을 개선했습니다.
- **Polygen 문법 및 예제 업데이트**: `sample.polygen` 및 예제 파일에 세미콜론 및 `max_length` 제약 조건 등 문법 변경 사항을 반영했습니다.
- **내부 로직 개선**: `main.rs`, `rhai_generator.rs`, `validation.rs` 등 핵심 로직을 업데이트된 AST/IR 모델 및 Rhai 엔진 사용에 맞춰 수정했습니다.

## 2025-08-09

- **C# 코드 생성 분할**: C# 코드 생성 템플릿을 개선하여 각 구조체 및 열거형이 별도의 파일로 생성되도록 분할했습니다.
    - `csharp_struct.rhai` 및 `csharp_enum.rhai` 템플릿을 새로 추가했습니다.
    - `csharp_namespace.rhai`는 네임스페이스 선언만 처리하도록 간소화했습니다.
    - `csharp_file.rhai`는 각 구조체 및 열거형에 대해 개별 C# 파일을 생성하도록 로직을 업데이트했습니다.

## 2025-08-09

- **IR 모델 개선 및 Rhai 연동 강화**:
    - `ir_model.rs`의 `StructDef`에 `embedded_structs: Vec<StructDef>` 필드를 추가하여 중첩된 구조체 정의를 명시적으로 포함할 수 있도록 했습니다.
    - `ir_builder.rs`에서 `TableMember::Embed`를 파싱할 때 해당 임베드된 구조체를 `StructDef`의 `embedded_structs` 필드에 올바르게 할당하도록 로직을 수정했습니다.