@@ -3,4 +3,4 @@
 development_guide.md 을 초기화때 읽고 준비를 시작하자
 작업을 하자라고 정확히 명령을 내리기 전까진 코드 변경 작업을 실행하지 마
 파일 변경을 할때는 UTF-8 및 crlf 로 파일 변경을 해줘야 한다.
-작업 마지막에는 changelog를 작성한다.
+git commit 를 실행할때는 changelog 를 작성하고 commit message 는 commit_message.txt 파일에 쓴후 해당 파일을 사용하여 커밋메세지를 만든다.
