@@ -1,5 +1,16 @@
 ## 2025-08-15
 
+- **Enum 값 할당 기능 추가**:
+  - `enum` 멤버에 명시적으로 정수 값을 할당할 수 있는 기능이 추가되었습니다 (예: `Enabled = 0`).
+  - `polygen.pest` 문법이 업데이트되어 `enum_variant`에 선택적 정수 값 할당을 지원합니다.
+  - AST 모델(`ast_model.rs`)의 `EnumVariant` 구조체에 `value: Option<i64>` 필드가 추가되었습니다.
+  - 파서(`ast_parser.rs`)가 `enum_variant`의 선택적 정수 값을 파싱하고 AST에 반영하도록 업데이트되었습니다.
+  - IR 모델(`ir_model.rs`)의 `EnumMember` 구조체에 `value: Option<i64>` 필드가 추가되었습니다.
+  - IR 빌더(`ir_builder.rs`)가 `enum` 멤버의 명시적 값을 처리하고, 값이 없는 경우 순차적으로 할당하도록 로직이 구현되었습니다.
+  - C# 코드 생성기(`csharp_generator.rs`)가 `enum` 멤버의 값을 C# 코드에 반영하도록 업데이트되었습니다.
+
+## 2025-08-15
+
 - **인라인 및 익명 열거형 지원 추가**:
   - PolyGen 스키마 내에서 인라인 및 익명 열거형을 정의하고 사용할 수 있도록 지원이 추가되었습니다.
   - AST 모델, 파서, IR 빌더 및 유효성 검사 로직이 새로운 열거형 타입을 처리하도록 업데이트되었습니다.
